# MedFM

./: .env  .gitignore  CLAUDE.md  DISTILLATION_README.md  LICENSE  README.md  calculate_metrics.py  distill.py  eval.py  main.py  patch_file  pyproject.toml  run_distill_experiments.py  train.py  visualize_analysis.py
config/: distill.yaml  train.yaml
config/data/: B.yaml  BUID.yaml  BUSBRA+B.yaml  BUSBRA+BUSI.yaml  BUSBRA.yaml  BUSBRA_SegFormer.yaml  BUSBRA_distill.yaml  BUSI+B.yaml  BUSI.yaml  BUS_UCLM.yaml  Standard.yaml  dynamic.yaml
config/method/: adaptive.yaml  feature.yaml  hybrid.yaml  logit.yaml
config/model/: TinyUSFM.yaml  USFM.yaml  ca_sam.yaml  sam.yaml  sam3.yaml  sam_dual_lora.yaml  sam_encoder_frozen_alignment_decoder_ft.yaml  sam_encoder_frozen_alignment_decoder_lora.yaml  sam_encoder_frozen_decoder_ft.yaml  sam_encoder_frozen_decoder_lora.yaml  sam_encoder_ft_decoder_lora.yaml  sam_encoder_lora_decoder_ft.yaml  sam_full_ft.yaml  sam_vit_b.yaml  segformer.yaml  usfm.yaml
config/model/encoder/: vit_b.yaml  vit_h.yaml  vit_l.yaml
config/student/: tinyusfm.yaml  usfm.yaml
config/teacher/: sam_decoder_ft_encoder_lora.yaml  sam_dual_lora.yaml  sam_encoder_frozen_alignment_decoder_ft.yaml  sam_encoder_frozen_alignment_decoder_lora.yaml  sam_encoder_frozen_decoder_ft.yaml  sam_encoder_frozen_decoder_lora.yaml  sam_encoder_ft_decoder_lora.yaml  sam_vit_b.yaml
config/training/: casam_training.yaml  sam_training.yaml  tinyusfm_training.yaml
distillers/: __init__.py  adaptive_distiller.py  base_distiller.py  feature_distiller.py  hybrid_distiller.py  logit_distiller.py  registry.py
model/: sam_hybrid_adapter.py  sam_lora_image_encoder.py  sam_lora_image_encoder_mask_decoder.py  tinyusfm.py  tinyusfm_seg.py  usfm.py  usfm_seg.py
model/ca_sam/: __init__.py  alignment_layer.py  ca_sam.py  config.py  losses.py  single_task.py  vae_router.py
model/dml/: main.py
model/segment_anything/modeling/: image_encoder.py  mask_decoder_samed.py  sam.py  samed.py
splits/: distillation_stratified_split_BUSBRA_BUSI_B_seed42.json
tests/: test_ca_sam_cl.py
trainers/: __init__.py  base_trainer.py  ca_sam_trainer.py  model_builder.py  sam3_adapter.py  sam3_trainer.py  sam_trainer.py  segformer_trainer.py  tinyusfm_trainer.py
utils/: convert_all_datasets.sh  convert_to_coco.py  data_processing.py  data_processing_seg.py  evaluate.py  feature_extractor.py  lightning_data.py  load_model.py  load_model_seg.py  logger.py  losses.py  notion.py  sam_utils.py  schedule.py  ultrasound_datasets.py  visualize.py
