[project]
name = "tinyusfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "timm==0.5.4",
    "numpy==2.1.2",
    "pillow==11.0.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "medpy==0.4.0",
    "termcolor==3.0.1",
    "tensorboardx==2.6.2.2",
    "scikit-image>=0.25.2",
    "hydra-core>=1.3.2",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
    "icecream>=2.1.8",
    "einops>=0.8.1",
    "safetensors>=0.7.0",
    "transformers>=4.57.3",
    "python-dotenv>=1.2.1",
    "notion-client>=2.7.0",
    "jupyter>=1.1.1",
]
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
markupsafe = [
  { index = "pypi", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
